k8s/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: mongodb-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.4
          ports:
            - containerPort: 27017
              name: mongodb-port
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
