k8s/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: rabbitmq-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq-with-definitions
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              name: rabbitmq-port
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
