k8s/reality-show-votes.yml
apiVersion: v1
kind: Service
metadata:
  name: realityshowvotes-service
spec:
  selector:
    app: realityshowvotes
  ports:
    - protocol: TCP
      port: 8080
      targetPort: votes-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: realityshowvotes-deploy
  labels:
    app: realityshowvotes-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realityshowvotes
  template:
    metadata:
      labels:
        app: realityshowvotes
    spec:
      containers:
        - name: realityshowvotes
          image: realityshowvotes:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: votes-port
              containerPort: 8080
