k8s/reality-show-web.yml
apiVersion: v1
kind: Service
metadata:
  name: realityshowweb-service
spec:
  selector:
    app: realityshowweb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: realityweb-port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: realityshowweb-deploy
  labels:
    app: realityshowweb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realityshowweb
  template:
    metadata:
      labels:
        app: realityshowweb
    spec:
      containers:
        - name: realityshowweb
          image: realityshowweb:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: realityweb-port
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
