k8s/reality-show-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realityshow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /reality-show(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: realityshowweb-service
                port:
                  number: 8080
